[metadata]
name = naiapi
version = 0.0.1
author = faebots
description = A library for interacting with the NovelAI API.
url = https://github.com/faebots/novelai-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src